--- a/templates/base.html
+++ b/templates/base.html
@@ -26,9 +26,9 @@
     <!-- Logo -->
     <a href="index2.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>H</b>Lj</span>
+      <span class="logo-mini"><b>H</b>Db</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Hus</b>Ljus</span>
+      <span class="logo-lg"><b>Hue</b>Dashboard</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
