First version ready for the wall! Yay

--- a/static/css/homehub-tablet.css
+++ b/static/css/homehub-tablet.css
@@ -91,6 +91,10 @@ body {
   font-size: 1.4em;
 }
 
+.weather-tile img {
+  height: 100px;
+}
+
 .weather-tile .description {
   font-size: 1.2em;
 }
