--- a/templates/tablet.html
+++ b/templates/tablet.html
@@ -6,7 +6,7 @@
      <div class="col-sm-4 hue-tile">
         {% if forecast %}
         <a href="/tablet" class="tile weather-tile bg-cat-1">
-          <img src="http://symbol.yr.no/grafikk/sym/svg/{{ forecast.symbol }}.svg" />
+          <img src="https://www.yr.no/grafikk/sym/v2016/svg/{{ forecast.symbol }}.svg" />
           <h2>{{ forecast.temperature }}&deg;C</h2>
           <span class="description"><span class="ion-paper-airplane"></span> {{ forecast.wind }}m/s <span class="ion-waterdrop"></span> {{ forecast.precipitation }}mm</span>
         </a>
