--- a/templates/tablet.html
+++ b/templates/tablet.html
@@ -5,11 +5,7 @@
     <div class="row hue-grid">
      <div class="col-sm-4 hue-tile">
         {% if forecast %}
-        <a href="/tablet" class="tile weather-tile bg-cat-1">
-          <img src="https://www.yr.no/grafikk/sym/v2016/svg/{{ forecast.symbol }}.svg" />
-          <h2>{{ forecast.temperature }}&deg;C</h2>
-          <span class="description"><span class="ion-paper-airplane"></span> {{ forecast.wind }}m/s <span class="ion-waterdrop"></span> {{ forecast.precipitation }}mm</span>
-        </a>
+        {% include "weather-tile.html" %}
         {% endif %}
       </div>
       <div class="col-sm-4 hue-tile">
@@ -19,7 +15,7 @@
         </a>
       </div>
       <div class="col-sm-4 hue-tile">
-        <a href="/tablet" class="tile bg-cat-1">
+        <a href="/scenes" class="tile bg-cat-1">
           <span class="ion-ios-grid-view ion"></span>
           <h2>Scener</h2>
         </a>
