Added error checking to weather forecast.

--- a/templates/scenes.html
+++ b/templates/scenes.html
@@ -11,6 +11,7 @@
       </div>
       <div class="col-sm-4 hue-tile">
         {% if forecast %}
+        {% set forecast = forecast|first %}
         {% include "weather-tile.html" %}
         {% endif %}
       </div>
