--- a/templates/base.html
+++ b/templates/base.html
@@ -26,14 +26,17 @@
         }
 	[class*="fa-lightbulb-o"]:before
 	{
-	    content:url('static/img/light.png');
+	    content:url('/static/img/light.png');
 	}
 	[class*="fa-dashboard"]:before
 	{
-	    content:url('static/img/dashboard.png');
+	    content:url('/static/img/dashboard.png');
 	}
 	.main-header .sidebar-toggle:before {
 	    content: url('/static/img/menu.png');
+	}
+	.ion-ios-lightbulb:before {
+	    content: url('/static/img/tinylight.png');
 	}
   </style>
 
@@ -96,9 +99,9 @@
   <!-- /.content-wrapper -->
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
-      <b>Version</b> 1.0
+      <small>Version 1.1</small>
     </div>
-    <strong>Copyright &copy; 2017 Joakim Calais</strong>. Released under the terms of the MIT license.
+    <small>Copyright &copy; 2017 Joakim Calais, MIT license.</small>
   </footer>
 </div>
   <!-- jQuery -->
